# mtxt

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml  pytest.ini
.github/workflows/: build.yml
docs/: note_lengths.md
python/mtxt/: __init__.pyi
src/: file.rs  lib.rs  main.rs  parser.rs  process.rs  python.rs  record_parser.rs  util.rs
src/midi/: midi_to_mtxt.rs  mod.rs  mtxt_to_midi.rs
src/transforms/: apply.rs  exclude.rs  extract.rs  group.rs  include.rs  merge.rs  mod.rs  offset.rs  quantize.rs  sort.rs  transpose.rs
src/types/: beat_time.rs  output_record.rs  record.rs
tests/python/: __init__.py  conftest.py  test_api.py  test_edge_cases.py  test_midi_bytes.py  test_roundtrip.py  test_types.py
tests/snapshots/: basic.in.mtxt  basic.out.events  basic.out.mtxt
