[package]
name = "mtxt"
version = "0.8.0"
edition = "2024"
authors = ["Dani Biró <danipro93@gmail.com>"]
description = "MTXT Music Text Format"
license = "MIT"
repository = "https://github.com/Daninet/mtxt"
readme = "README.md"
keywords = ["mtxt", "music", "midi", "text", "format", "audio", "synth", "converter", "parser"]
categories = ["multimedia", "encoding", "parser-implementations", "command-line-utilities"]

[lib]
name = "mtxt"
path = "src/lib.rs"

[[bin]]
name = "mtxt"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["midi"]
midi = ["dep:midly"]
cli = ["dep:clap"]

[dependencies]
clap = { version = "4.4", features = ["derive"], optional = true }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
midly = { version = "0.5", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
