[package]
name = "mtxt"
version = "0.9.0"
edition = "2024"
authors = ["Dani Biró <danipro93@gmail.com>"]
description = "MTXT Music Text Format"
license = "MIT"
repository = "https://github.com/Daninet/mtxt"
readme = "README.md"
keywords = ["mtxt", "music", "midi", "text", "format"]
categories = ["multimedia", "encoding", "parser-implementations", "command-line-utilities"]

[lib]
name = "mtxt"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mtxt"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["midi"]
midi = ["dep:midly"]
cli = ["dep:clap"]
python = ["dep:pyo3"]

[dependencies]
clap = { version = "4.4", features = ["derive"], optional = true }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
midly = { version = "0.5", default-features = false, features = ["std"], optional = true }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
