[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mtxt"
version = "0.8.1"
description = "MTXT Music Text Format - Python bindings"
authors = [{name = "Dani Biró", email = "danipro93@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["mtxt", "music", "midi", "text", "format"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/Daninet/mtxt"
Repository = "https://github.com/Daninet/mtxt"

[tool.maturin]
features = ["pyo3", "midi"]
include = ["python/mtxt/__init__.pyi", "python/mtxt/py.typed"]
